# data-clean-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  data_clean_environment.py
tasks/: __init__.py  task_data.py
tests/: test_client.py  test_graders.py  test_inference_format.py
